--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,8 @@
   <!-- Allow installing the app to the homescreen -->
   <meta name="mobile-web-app-capable" content="yes">
 
-  <link rel="icon" href="/favicon.ico" />
+  <link rel="icon" href="/favicon.ico" />  
+  
   <title>React.js Boilerplate</title>
 </head>
 
@@ -23,6 +24,8 @@
 
   <!-- The app hooks into this div -->
   <div id="app"></div>
+
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
   <!-- A lot of magic happens in this file. HtmlWebpackPlugin automatically injects all assets (e.g. bundle.js, main.css) with the correct HTML tags, which is why they are missing in this file. Don't add any assets here! (Check out webpack.dev.babel.js and webpack.prod.babel.js if you want to know more) -->
 </body>
 
